<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/darGray"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" > <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
            <android.support.v7.widget.SearchView
            android:id="@+id/searchView"
                style="@style/SearchViewStyle"
                android:outlineAmbientShadowColor="@color/lightestGray"
                android:outlineSpotShadowColor="@color/lightestGray"

            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


            <Button
                android:id="@+id/sortBtn"
                android:background="@drawable/ic_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort" />

            <EditText
                android:id="@+id/make"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColorHint="@color/lightestGray"
                android:inputType="text"
                android:textColor="@color/lightestGray"
                android:hint="@string/make" />

            <EditText
                android:id="@+id/model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:textColorHint="@color/lightestGray"
                android:textColor="@color/lightestGray"
                android:hint="@string/model" />
            <EditText
                android:id="@+id/carNumb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/lightestGray"
                android:textColor="@color/lightestGray"
                android:inputType="text"
                android:ems="10"
                android:hint="@string/car_number" />
            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                app:srcCompat="@drawable/ic_car_image_placeholder"
                android:id="@+id/carImg"
                tools:ignore="VectorDrawableCompat" />

            <Button
                android:id="@+id/addcar"
                android:background="@drawable/ic_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_car_to_list" /></LinearLayout>


    </ScrollView>





</LinearLayout>