<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/list_background"
    android:layout_height="wrap_content"
    app:layout_constraintCircleRadius="50dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginLeft="5dp"
            android:id="@+id/carimage"
            app:srcCompat="@drawable/ic_car_image_placeholder"
            tools:ignore="VectorDrawableCompat"
            android:focusableInTouchMode="false"
            android:clickable="false"
            android:layout_marginStart="5dp" />
        <TextView
            android:id="@+id/make"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/make"
            android:textColor="@color/darGray"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/carimage"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_toEndOf="@id/carimage"
            android:layout_marginStart="5dp" />

        <TextView
            android:id="@+id/carNumb"
            android:hint="@string/car_number"
            android:layout_below="@+id/model"
            android:layout_toRightOf="@id/carimage"
            android:textAlignment="center"
            android:layout_marginLeft="5dp"
            android:textColor="@color/darGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_toEndOf="@id/carimage"
            android:layout_marginStart="5dp" />

        <TextView
            android:hint="@string/model"
            android:layout_below="@id/make"
            android:layout_toRightOf="@+id/carimage"
            android:layout_marginLeft="5dp"
            android:textColor="@color/yellow"
            android:layout_width="wrap_content"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:id="@+id/model"
            android:textSize="18sp"
            android:layout_toEndOf="@+id/carimage"
            android:layout_marginStart="5dp" />
    </RelativeLayout>
</LinearLayout>