<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/list_background"
    android:layout_height="wrap_content"
    app:layout_constraintCircleRadius="50dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/car_numb_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_number_txt"
            android:textColor="@color/yellow"
            android:textAlignment="center"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp" />

        <TextView
            android:id="@+id/carNumb"
            android:layout_toRightOf="@id/car_numb_txt"
            android:textAlignment="center"
            android:layout_marginLeft="10dp"
            android:textColor="@color/darGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/repaired_txt" />

        <TextView
            android:id="@+id/repaired_txt"
            android:layout_below="@id/car_numb_txt"
            android:text="@string/repaired_object"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/yellow"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="10dp" />
        <TextView
            android:id="@+id/repaired"
            android:layout_toRightOf="@id/repaired_txt"
            android:textAlignment="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/darGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_below="@+id/carNumb"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/repaired_txt" />
        <TextView
            android:id="@+id/cost_txt"
            android:layout_below="@id/repaired_txt"
            android:text="@string/total_cost"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/yellow"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="10dp" />
        <TextView
            android:id="@+id/cost"
            android:layout_toRightOf="@id/cost_txt"
            android:textAlignment="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/darGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_below="@+id/repaired"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/repaired_txt" />
    </RelativeLayout>
</LinearLayout>